lintian-brush (0.47) UNRELEASED; urgency=medium

  * Add apply-multiarch-hints script.
  * Add --opinionated option. Closes: #942604

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 14 Dec 2019 13:51:36 +0000

lintian-brush (0.46) unstable; urgency=medium

  * Downgrade certainty of init.d-script-needs-depends-on-lsb-base fixer
    because of false positives, effectively disabling it. Partially addresses
    #946398
  * Don't drop autoreconf if we can't upgrade debhelper beyond 9.
  * Prevent unnecessary includes of /usr/share/dpkg/architecture.mk.
    Closes: #946414
  * Add a --exclude flag.
  * Attempt to preserve YAML directives in debian/upstream/metadata, if
    present. See #946413
  * Disable setting of the Screenshots field in debian/upstream/metadata
    to individual files; it seems likely these will get stale and become
    a source of toil.
  * Don't keep debian/upstream/metadata files with just the Archive
    field set.
  * Add fixer for debian-rules-missing-recommended-target.
  * possible-missing-colon-in-closes: Cope with phrases like 'partially
    closes'.
  * Fix handling of empty Build-Depends in build-depends-on-{build-
    essential,obsolete-package}.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 12 Dec 2019 23:54:23 +0000

lintian-brush (0.45) unstable; urgency=medium

  * Improve plural vs singular in commit messages and changelog
    messages.
  * Support whitespace before conditionals in makefiles.
  * Support options in debian/patches/series.
  * Drop the empty-debian-patches-series file, which has proved
    controversial.
  * Double-check bug numbers when adding missing colons in closes:
    stanzas. Closes: #946338
  * Don't update changelog if there are only gbp-dch entries in the
    current changelog entry. Closes: #946339
  * Fixup outdated freedesktop.org repository URLs.
  * Use canonical and secure repository URIs in
    debian/upstream/metadata.
  * Downgrade certainty of e-mail addresses in configure-reported bug